<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/barraBusqueda"
        android:icon="@drawable/vector_search"
        android:title="@string/buscar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />


    <item
        android:id="@+id/itemCreditos"
        android:icon="@drawable/vector_creditos"
        android:title="@string/creditos"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemCompartir"
        android:title="@string/compartir"
        app:showAsAction="ifRoom"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />


</menu>